src/test/fixtures/syntax-error/deny-expecting-allow/Main.hp
import Syntax;

main =  
  DENY
  EXCEPT {
    ALLOW {
      Actors: Analyst
      Resources
      Actions
    }
    DENY Syntax::alice
  };